[project]
name = "dsa-tracker"
version = "0.1.0"
description = "Spaced-repetition DSA tracker for LeetCode practice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
dsa-tracker = "main:main"

